--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">Home</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<!-- <li><a href="index.html">Home</a></li> -->
 							<li>
-								<a href="#">Layouts</a>
-								<ul>
+								<a href="no-sidebar.html">About me</a>
+								<!-- <ul>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="no-sidebar.html">About Me</a></li>
 									<li>
 										<a href="#">Submenu</a>
 										<ul>
@@ -36,10 +36,10 @@
 											<li><a href="#">Option 4</a></li>
 										</ul>
 									</li>
-								</ul>
+								</ul> -->
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="right-sidebar.html">Contact</a></li>
+							<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
 						</ul>
 					</nav>
 				</header>
@@ -48,9 +48,9 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2> Welcome to Dee's Monograms. </h2>
+							<p>Serving customers for eighteen years with a friendly touch. <br />
+							</p> <br>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
@@ -65,12 +65,12 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Alterations and embroidery at an affordable price.</h2>
+										<p>Serving the community for over eighteen years. </p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
+									<p>As
 									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
 									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
 									augue varius tempus lobortis porttitor accumsan consequat
@@ -91,7 +91,8 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/pic03.jpg"
+                        <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@alex_andrews?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Alexander Andrews"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Alexander Andrews</span></a>alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Interdum amet non magna accumsan</h2>
@@ -107,7 +108,8 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"> <img src="images/pic04.jpg" alt="" />
+                    </span>
 					<div class="content">
 						<header>
 							<h2>Interdum felis blandit praesent sed augue</h2>
